# simpletrace

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Instance.cpp  Instance.h  LICENSE  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Objects.cpp  Objects.h  Progress.h  README.md  Scene.cpp  Scene.h  Vertex.h  main.cpp  scene.xml
src/: Image.cpp  Instance.h  Material.cpp  Material.h  Matrix.h  Objects.h  Progress.h  Scene.cpp
